ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    k8s.renderer/template-version: 1.0.0
    k8s.renderer/commit: 2124d1bd0dfd53b8f997754e4a32e1b7b12a8fd7
    k8s.renderer/branch: refs/tags/v1.0.2
    k8s.renderer/vcs-url: matiasmartin-labs/auth-ms
    k8s.renderer/render-time: 2025-04-27T19:51:22Z
  labels:
    app.kubernetes.io/name: auth-ms
    app.kubernetes.io/part-of: auth-system
    app.kubernetes.io/version: v1.0.2
    app.kubernetes.io/managed-by: k8s.renderer
  name: auth-ms
  namespace: matiasmartin-labs
spec:
  rules:
    - host: auth-ms.raspisrv.local
      http:
        paths:
          - backend:
              service:
                name: auth-ms
                port:
                  name: http
            path: /
            pathType: Prefix
